# consult-clouds

./: .gitignore  LICENSE  README.md  pyproject.toml  zzero-dev-env-setup.sh
consult-clouds/: docs_tools.py  pandas_ext.py
docs/: 00projectanchor-consult-clouds-bdf74c3e.md  00projectanchor-template.md  CONTENTS.md  anchorarchive-irate-client-1e39d712.md  big-period-d86cc2dd.md  design-doc-promptlib-eatable-cause-30b99399.md  main_notes_as_a_human_how_to_code_with_codex.md  main_notes_for_codex_update_toc.md  main_notes_rewrite_loop_primer_diligent_director_7da624a4.md  main_notes_wiki_article_creation_for_codex.md  prompt-plucky-crew-71568ea9.md  prompt0.md  prompt0_launch.md  prompt1-normal-associate-763211a8.md  prompt1_context_lib.md  prompt2-apathetic-fall-6ad38cd4.md  prompt2_-rare-week-4d080b4a.md  prompt2_therapeutic-essay-3e4c6fa9.md  prompt3_speculate_prompt_direful-industry-0c7a2592.md  prompt4_promptlib_init_imperfect-drive-6a6433cf.md  rewrite-loop-primer-diligent-director-7da624a4.md  tutorial-rare-week-4d080b4a.md  tutorial_therapeutic-essay-3e4c6fa9.md  unnamed-slow-beginning-f3a7ec9f.md
notebooks/: test iter loop .ipynb
tests/: test_chat.py  test_chunking.py  test_cli.py  test_config.py  test_promptlib_cli.py
zero_consult_clouds/: __init__.py  chat.py  chunking_processor.py  cli.py  config.py  direful.py  docs_tools.py  helpers.py  interactive_fill.py  interactive_viewer.py  pandas_ext.py  promptlib.py  rewrite_loops.py  zerox_terminal_display.py
zero_consult_clouds/assets/: convo-20250619-v1.md  obsidian-promptlog.md.j2  (+1 more)
